# tempowork

./: CIG.py  CIG_node.py  IT.py  IT_node.py  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tempowork.py
src/: CIG.py  CIG_node.py  IT.py  IT_nil.py  IT_node.py  __init__.py  tempowork.py
src/tempowork/: CIG.py  CIG_edge.py  CIG_node.py  IT.py  IT_node.py  __init__.py  tempowork.py
src/tempowork.egg-info/: PKG-INFO  SOURCES.txt
tempowork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: exact.txt  inexact.txt  seq_exact.txt  seq_inexact.txt
