[tool.poetry]
name = "tempowork"
version = "0.1.2"
description = "A library for mining temporal networks where time is represented as a continuous dimension!"
authors = ["alijazayeri <jazayeri.ali@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
